[package]
name = "glfw-sys"
version = "4.0.0+3.4.0"
authors = ["DKing <dking@tot.im>"]
description = "An Open Source, multi-platform library for creating windows with OpenGL contexts and receiving input and events"
documentation = "http://www.glfw.org/documentation.html"
homepage = "http://www.glfw.org/"
repository = "https://github.com/DKingAlpha/glfw"
readme = "README.md"
license = "Zlib"
build = "build.rs"
links = "glfw"

[lib]
name = "glfw_sys"
path = "lib.rs"

[build-dependencies]
cmake = "0.1"

[features]
wayland = []
